# python-project-template

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
project_name/: foo.py
project_name/subpackage/: bar.py
tests/: test_foo.py  utils.py
tests/subtests/: test_bar.py
